crates/pipeline-tests/tests/snapshots/runner__tests__snippets__reference__directives__annotations.qasm-sema.snap
---
source: crates/pipeline-tests/tests/runner.rs
expression: sema_snap
---
id: tests/snippets/reference/directives/annotations.qasm
expect-sema: Diag
--- sema ---
ok: false
panicked: false
errors: 1
--- asg ---
AnnotatedStmt(AnnotatedStmt { stmt: InputDeclaration(InputDeclaration { name: Ok(SymbolId(7)) }), annotations: [Annotation { annotation_text: "@bind [2:3]" }] })

AnnotatedStmt(AnnotatedStmt { stmt: OutputDeclaration(OutputDeclaration { name: Ok(SymbolId(8)) }), annotations: [Annotation { annotation_text: "@rename other" }] })

AnnotatedStmt(AnnotatedStmt { stmt: DeclareClassical(DeclareClassical { name: Err(AlreadyBound), initializer: None }), annotations: [Annotation { annotation_text: "@hello world" }] })

AnnotatedStmt(AnnotatedStmt { stmt: DefStmt(DefStmt { name: Ok(SymbolId(10)), params: [], block: Block { statements: [DeclareClassical(DeclareClassical { name: Ok(SymbolId(9)), initializer: None }), ExprStmt(TExpr { expression: Return(ReturnExpression { value: None }), ty: Void })] }, return_type: Void }), annotations: [Annotation { annotation_text: "@outer" }, Annotation { annotation_text: "@inner word1" }, Annotation { annotation_text: "@inner word2" }] })

AnnotatedStmt(AnnotatedStmt { stmt: DeclareClassical(DeclareClassical { name: Err(AlreadyBound), initializer: None }), annotations: [Annotation { annotation_text: "@first" }, Annotation { annotation_text: "@second @not_third" }] })

AnnotatedStmt(AnnotatedStmt { stmt: Assignment(Assignment { lvalue: Identifier(Ok(SymbolId(7))), rvalue: TExpr { expression: Cast(Cast { operand: TExpr { expression: Literal(Int(IntLiteral { value: 1, sign: true })), ty: Int(Some(128), True) }, typ: UInt(Some(16), False) }), ty: UInt(Some(16), False) } }), annotations: [Annotation { annotation_text: "@binds tightly" }] })

Assignment(Assignment { lvalue: Identifier(Ok(SymbolId(7))), rvalue: TExpr { expression: Cast(Cast { operand: TExpr { expression: Literal(Int(IntLiteral { value: 2, sign: true })), ty: Int(Some(128), True) }, typ: UInt(Some(16), False) }), ty: UInt(Some(16), False) } })
