crates/pipeline-tests/tests/snapshots/runner__tests__snippets__reference__directives__annotations2.qasm-parse.snap
---
source: crates/pipeline-tests/tests/runner.rs
expression: parse_snap
---
id: tests/snippets/reference/directives/annotations2.qasm
expect-parse: Ok
--- parser ---
ok: true
panicked: false
errors: 0
--- ast ---
SOURCE_FILE@0..272: // lex: ok
// parse: ok
// sema: ok

@bind [2:3]
input uint[16] x;

@rename other
output float[64] var;

@hello world
int[8] y;

@outer
def fn() {
  @inner word1
  uint[16] x;
  @inner word2
  return;
}

@first
@second @not_third
uint[16] z;

@binds tightly
x = 1; x = 2;

ANNOTATION_STATEMENT@37..48: @bind [2:3]
I_O_DECLARATION_STATEMENT@49..66: input uint[16] x;
SCALAR_TYPE@55..63: uint[16]
DESIGNATOR@59..63: [16]
LITERAL@60..62: 16
NAME@64..65: x
ANNOTATION_STATEMENT@68..81: @rename other
I_O_DECLARATION_STATEMENT@82..103: output float[64] var;
SCALAR_TYPE@89..98: float[64]
DESIGNATOR@94..98: [64]
LITERAL@95..97: 64
NAME@99..102: var
ANNOTATION_STATEMENT@105..117: @hello world
CLASSICAL_DECLARATION_STATEMENT@118..127: int[8] y;
SCALAR_TYPE@118..124: int[8]
DESIGNATOR@121..124: [8]
LITERAL@122..123: 8
NAME@125..126: y
ANNOTATION_STATEMENT@129..135: @outer
DEF@136..202: def fn() {
  @inner word1
  uint[16] x;
  @inner word2
  return;
}
NAME@140..142: fn
TYPED_PARAM_LIST@142..144: ()
BLOCK_EXPR@145..202: {
  @inner word1
  uint[16] x;
  @inner word2
  return;
}
ANNOTATION_STATEMENT@149..161: @inner word1
CLASSICAL_DECLARATION_STATEMENT@164..175: uint[16] x;
SCALAR_TYPE@164..172: uint[16]
DESIGNATOR@168..172: [16]
LITERAL@169..171: 16
NAME@173..174: x
ANNOTATION_STATEMENT@178..190: @inner word2
EXPR_STMT@193..200: return;
RETURN_EXPR@193..199: return
ANNOTATION_STATEMENT@204..210: @first
ANNOTATION_STATEMENT@211..229: @second @not_third
CLASSICAL_DECLARATION_STATEMENT@230..241: uint[16] z;
SCALAR_TYPE@230..238: uint[16]
DESIGNATOR@234..238: [16]
LITERAL@235..237: 16
NAME@239..240: z
ANNOTATION_STATEMENT@243..257: @binds tightly
ASSIGNMENT_STMT@258..264: x = 1;
IDENTIFIER@258..259: x
LITERAL@262..263: 1
ASSIGNMENT_STMT@265..271: x = 2;
IDENTIFIER@265..266: x
LITERAL@269..270: 2
