crates/pipeline-tests/tests/snapshots/runner__tests__snippets__reference__directives__defcalgrammar.qasm-lex.snap
---
source: crates/pipeline-tests/tests/runner.rs
expression: lex_snap
---
id: tests/snippets/reference/directives/defcalgrammar.qasm
expect-lex: Ok
--- source ---
// lex: ok
// parse: todo
// sema: todo

defcalgrammar 'openpulse';
defcalgrammar "openpulse";
defcalgrammar "001";
--- lexer ---
ok: true
errors: 0
[0] LineComment "// lex: ok" @0..10
[1] Whitespace "\n" @10..11
[2] LineComment "// parse: todo" @11..25
[3] Whitespace "\n" @25..26
[4] LineComment "// sema: todo" @26..39
[5] Whitespace "\n\n" @39..41
[6] Ident "defcalgrammar" @41..54
[7] Whitespace " " @54..55
[8] Unknown "'" @55..56
[9] Ident "openpulse" @56..65
[10] Unknown "'" @65..66
[11] Semi ";" @66..67
[12] Whitespace "\n" @67..68
[13] Ident "defcalgrammar" @68..81
[14] Whitespace " " @81..82
[15] Literal { kind: Str { terminated: true }, suffix_start: 11 } ""openpulse"" @82..93
[16] Semi ";" @93..94
[17] Whitespace "\n" @94..95
[18] Ident "defcalgrammar" @95..108
[19] Whitespace " " @108..109
[20] Literal { kind: BitStr { terminated: true, consecutive_underscores: false }, suffix_start: 5 } ""001"" @109..114
[21] Semi ";" @114..115
[22] Whitespace "\n" @115..116
