crates/pipeline-tests/tests/snapshots/runner__tests__snippets__reference__directives__defcalgrammar.qasm-parse.snap
---
source: crates/pipeline-tests/tests/runner.rs
expression: parse_snap
---
id: tests/snippets/reference/directives/defcalgrammar.qasm
expect-parse: Todo
--- parser ---
ok: false
panicked: false
errors: 1
--- ast ---
SOURCE_FILE@0..116: // lex: ok
// parse: todo
// sema: skip

defcalgrammar 'openpulse';
defcalgrammar "openpulse";
defcalgrammar "001";

DEF_CAL_GRAMMAR@41..67: defcalgrammar 'openpulse';
FILE_PATH@55..66: 'openpulse'
DEF_CAL_GRAMMAR@68..94: defcalgrammar "openpulse";
FILE_PATH@82..93: "openpulse"
DEF_CAL_GRAMMAR@95..115: defcalgrammar "001";
ERROR@109..114: "001"
