crates/pipeline-tests/tests/snapshots/runner__tests__snippets__reference__directives__include.qasm-lex.snap
---
source: crates/pipeline-tests/tests/runner.rs
expression: lex_snap
---
id: tests/snippets/reference/directives/include.qasm
expect-lex: Ok
--- source ---
// lex: ok
// parse: panic
// sema: panic

include 'foo2';
include "foo";
include "001";
--- lexer ---
ok: true
errors: 0
[0] LineComment "// lex: ok" @0..10
[1] Whitespace "\n" @10..11
[2] LineComment "// parse: panic" @11..26
[3] Whitespace "\n" @26..27
[4] LineComment "// sema: panic" @27..41
[5] Whitespace "\n\n" @41..43
[6] Ident "include" @43..50
[7] Whitespace " " @50..51
[8] Literal { kind: Str { terminated: true }, suffix_start: 6 } "'foo2'" @51..57
[9] Semi ";" @57..58
[10] Whitespace "\n" @58..59
[11] Ident "include" @59..66
[12] Whitespace " " @66..67
[13] Literal { kind: Str { terminated: true }, suffix_start: 5 } ""foo"" @67..72
[14] Semi ";" @72..73
[15] Whitespace "\n" @73..74
[16] Ident "include" @74..81
[17] Whitespace " " @81..82
[18] Literal { kind: BitStr { terminated: true, consecutive_underscores: false }, suffix_start: 5 } ""001"" @82..87
[19] Semi ";" @87..88
[20] Whitespace "\n" @88..89
