crates/pipeline-tests/tests/snapshots/runner__tests__snippets__reference__directives__include.qasm-sema.snap
---
source: crates/pipeline-tests/tests/runner.rs
expression: sema_snap
---
id: tests/snippets/reference/directives/include.qasm
expect-sema: Panic
--- sema ---
ok: false
panicked: true
panic: called `Option::unwrap()` on a `None` value
errors: 0
--- asg ---
(no asg)
