crates/pipeline-tests/tests/snapshots/runner__tests__snippets__reference__directives__pragma.qasm-lex.snap
---
source: crates/pipeline-tests/tests/runner.rs
expression: lex_snap
---
id: tests/snippets/reference/directives/pragma.qasm
expect-lex: Ok
--- source ---

pragma IO_BIND[2:3]
#pragma  __directive_info__ 0
--- lexer ---
ok: true
errors: 0
[0] Whitespace "\n" @0..1
[1] Pragma "pragma IO_BIND[2:3]" @1..20
[2] Whitespace "\n" @20..21
[3] Pragma "#pragma  __directive_info__ 0" @21..50
[4] Whitespace "\n" @50..51
