crates/pipeline-tests/tests/snapshots/runner__tests__snippets__reference__directives__pragma.qasm-parse.snap
---
source: crates/pipeline-tests/tests/runner.rs
expression: parse_snap
---
id: tests/snippets/reference/directives/pragma.qasm
expect-parse: Ok
--- parser ---
ok: true
panicked: false
errors: 0
--- ast ---
SOURCE_FILE@0..87: // lex: ok
// parse: ok
// sema: ok

pragma IO_BIND[2:3]
#pragma  __directive_info__ 0

PRAGMA_STATEMENT@37..56: pragma IO_BIND[2:3]
PRAGMA_STATEMENT@57..86: #pragma  __directive_info__ 0
